# ha-hp1820

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: building.yaml  hassfest.yaml  linting.yaml  publish.yaml  testing.yaml
custom_components/hp1820/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  devices.py  helpers.py  hp1820_client.py  icons.json  manifest.json  services.py  services.yaml  strings.json  switch.py
custom_components/hp1820/translations/: en.json  it.json
tests/: conftest.py  helpers.py  test_client.py  test_config_flow.py  test_coordinator.py  test_devices.py  test_helpers.py  test_options_flow.py  test_services.py  test_switch.py
